align fixed

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -6,27 +6,46 @@ body {
 /* nav related styles */
 nav {
     display: flex;
+    /* justify-content: space-between; */
+    align-items: center;
 }
+
 nav ul {
     display: flex;
-
+    align-items: center;
 }
+
 nav li {
     list-style: none;
     margin-right: 50px;
 }
+
 nav a {
     text-decoration: none;
     color: #474747
 }
+
 .nav-title {
     color: #181818;
-font-family: Open Sans;
-font-size: 45px;
-font-style: normal;
-font-weight: 800;
-line-height: normal;
+    font-family: Open Sans;
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
 }
+
 .text-primary {
     color: #FD6E0A
+}
+
+.btn-primary {
+    border-radius: 5px;
+    background: #FD6E0A;
+    border: 0;
+    color: white;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    padding: 15px 35px;
+
 }
